# llm-engineering-lab

./: .gitignore  README.md  pyproject.toml  requirements.txt
01-llm-playground/: README.md  pyproject.toml
01-llm-playground/src/: __init__.py  config.py  main.py
01-llm-playground/src/client/: llm_client.py
01-llm-playground/src/models/: llm_request.py
01-llm-playground/src/utils/: metrics.py
01-llm-playground/tests/: conftest.py
01-llm-playground/tests/unit/: test_llm_client.py  test_llm_request.py  test_metrics.py
01_LLM_Playground/: requirements.txt
02-prompt-registry/: .env.example  README.md  pyproject.toml
02-prompt-registry/prompts/cap_theorem_explainer/: v1.yaml  v2.yaml
02-prompt-registry/src/: config.py  main.py
02-prompt-registry/src/models/: llm_request.py
02-prompt-registry/src/registry/: prompt_registry.py
02-prompt-registry/src/renderer/: prompt_renderer.py
02-prompt-registry/tests/: conftest.py
02-prompt-registry/tests/unit/: test_prompt_registry.py  test_prompt_renderer.py
03-prompt-evaluation/: .env.example  README.md  pyproject.toml  pytest.ini
03-prompt-evaluation/datasets/: cap_theorem.yaml
03-prompt-evaluation/src/: config.py  main.py
03-prompt-evaluation/src/evaluator/: prompt_evaluator.py
03-prompt-evaluation/src/runner/: evaluation_runner.py
03-prompt-evaluation/tests/: conftest.py
03-prompt-evaluation/tests/unit/: test_evaluation_runner.py
04-hallucination-lab/: README.md  pyproject.toml
04-hallucination-lab/datasets/: hallucination.yaml  instruction_bypass.yaml  overconfidence.yaml
04-hallucination-lab/src/: config.py  main.py
04-hallucination-lab/src/classifier/: failure_classifier.py
04-hallucination-lab/src/runner/: failure_runner.py
04-hallucination-lab/tests/: __init__.py  conftest.py
04-hallucination-lab/tests/integration/: test_end_to_end.py  test_failure_runner.py  test_main.py
04-hallucination-lab/tests/unit/: test_datasets.py  test_failure_classifier.py
05-guardrails/: README.md  pyproject.toml
05-guardrails/schemas/: explanation_schema.json
05-guardrails/src/: config.py  main.py
05-guardrails/src/guardrails/: safety_guard.py
05-guardrails/src/validator/: output_validator.py
06-ReAct-pattern/: README.md  pyproject.toml
06-ReAct-pattern/src/: __init__.py  config.py  main.py
06-ReAct-pattern/src/agent/: react_agent.py
06-ReAct-pattern/src/registry/: tool_registry.py
06-ReAct-pattern/src/tools/: __init__.py  knowledge_base.py
06-ReAct-pattern/tools/: calculator.py
07-agent-loop-and-multistep-planning/: README.md  pyproject.toml
07-agent-loop-and-multistep-planning/src/: main.py
07-agent-loop-and-multistep-planning/src/agent/: agent_loop.py
07-agent-loop-and-multistep-planning/src/memory/: conversation_state.py
07-agent-loop-and-multistep-planning/src/parser/: action_parser.py
08-agent-memory/: README.md  pyproject.toml
08-agent-memory/src/: main.py
08-agent-memory/src/agent/: memory_agent_loop.py
08-agent-memory/src/memory/: long_term_memory.py  memory_manager.py  short_term_memory.py
09-planner-executor-pattern/: README.md  pyproject.toml
09-planner-executor-pattern/src/: main.py
09-planner-executor-pattern/src/executor/: executor_agent.py
09-planner-executor-pattern/src/planner/: planner_agent.py
09-planner-executor-pattern/src/workflow/: workflow_agent.py
common/: README.md  pyproject.toml  setup.cfg
common/common/: __init__.py
