[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-playground"
version = "0.1.0"
description = "Core LLM client and models for LLM Engineering Lab"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "tiktoken>=0.7.0",
]

[tool.setuptools.packages.find]
where = ["src"]
