[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "common"
version = "0.1.0"
description = "Common utilities for LLM Engineering Lab"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.0.0",
]

[tool.setuptools]
packages = ["common"]
